-
Bug
-
Resolution: Fixed
-
P2: Important
-
Some future release
-
None
-
-
ab05e05f6 (dev), fce7a4526 (6.8), 024fdcd0c (6.7), b387537d3 (dev), fbfec48c4 (6.8), 06055fe93 (6.7)
broken out of a https://bugreports.qt.io/browse/QTBUG-122753 comment
/mnt/b/yoe/master/build/tmp/work/riscv64-yoe-linux-musl/qtbase/6.7.2/image/usr/include/QtCore/qanystringview.h:135:35: error: implicit instantiation of undefined template 'std::char_traits<QChar>' 135 | return qsizetype(std::char_traits<Char>::length(str)); | ^ /mnt/b/yoe/master/build/tmp/work/riscv64-yoe-linux-musl/qtbase/6.7.2/image/usr/include/QtCore/qanystringview.h:174:37: note: in instantiation of function template specialization 'QAnyStringView::lengthHelperPointer<QChar>' requested ↪ here 174 | : QAnyStringView{str, str ? lengthHelperPointer(str) : 0} {} | ^ /mnt/b/yoe/master/build/tmp/work/riscv64-yoe-linux-musl/qtbase/6.7.2/git/tests/auto/corelib/text/qanystringview/tst_qanystringview.cpp:685:14: note: in instantiation of function template specialization 'QAnyStringView::QAnyStringView< ↪ const QChar *, true>' requested here 685 | QCOMPARE(QAnyStringView(null).size(), qsizetype(0)); | ^ /mnt/b/yoe/master/build/tmp/work/riscv64-yoe-linux-musl/qtbase/6.7.2/git/tests/auto/corelib/text/qanystringview/tst_qanystringview.cpp:344:9: note: in instantiation of function template specialization 'tst_QAnyStringView::fromLiteral< ↪ QChar>' requested here 344 | fromLiteral(str); | ^
- clones
-
QTBUG-122753 Qt Multimedia: implicit instantiation of undefined template 'std::char_traits<unsigned char>' (libc++ 19 / musl libc / amd64)
-
- Closed
-
- relates to
-
QTBUG-128325 tst_qbytearrayview test gives deprecated warnings at compilation
-
- Closed
-
| For Gerrit Dashboard: QTBUG-126214 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 567406,2 | Strings: get rid of the last std::char_traits use | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 570457,2 | Strings: get rid of the last std::char_traits use | 6.8 | qt/qtbase | Status: MERGED | +2 | 0 |
| 570526,2 | Strings: get rid of the last std::char_traits use | 6.7 | qt/qtbase | Status: MERGED | +2 | 0 |
| 585468,3 | tst_QByteArrayView: remove use of std::char_traits | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 586094,2 | tst_QByteArrayView: remove use of std::char_traits | 6.8 | qt/qtbase | Status: MERGED | +2 | 0 |
| 586217,2 | tst_QByteArrayView: remove use of std::char_traits | 6.7 | qt/qtbase | Status: MERGED | +2 | 0 |