src/corelib/text/qstringview.h
@@ -107,7 +107,7 @@ private:
     static constexpr qsizetype lengthHelperPointer(const Char *str) noexcept
     {
         if (q20::is_constant_evaluated())
-            return std::char_traits<Char>::length(str);
+            return QtPrivate::lengthHelperPointer(str);
         return QtPrivate::qustrlen(reinterpret_cast<const char16_t *>(str));
     }
     static qsizetype lengthHelperPointer(const QChar *str) noexcept
